Fix test: make the list returned by randomDepositsWithIndex() modifiable