@@ -32,6 +32,7 @@ import java.util.function.BiFunction;
 import java.util.function.Consumer;
 import java.util.function.Function;
 import java.util.function.Supplier;
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
 import org.apache.tuweni.bytes.Bytes;
@@ -1626,7 +1627,7 @@ public final class DataStructureUtil {
   }
 
   public List<DepositWithIndex> randomDepositsWithIndex(final int num) {
-    return Stream.generate(this::randomDepositWithIndex).limit(num).toList();
+    return Stream.generate(this::randomDepositWithIndex).limit(num).collect(Collectors.toList());
   }
 
   public SszList<Deposit> randomSszDeposits(final int num) {
